# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = copa_map
description = Add a short description here!
author = Marvin Stüde
author-email = Marvin.Stuede@imes.uni-hannover.de
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project-urls =
    Documentation = https://pyscaffold.org/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.3a0,<4
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    numpy==1.18.5
    scipy==1.6.2
    scikit-learn==0.24.0
    pandas==1.2.0
    cryptography==3.3.2
    numpoly==1.1.1 #Needed for chaospy. Error with numpy version required by tensordlow if, newer version is installed
    chaospy==4.2.2
    matplotlib
    #gpy==1.9.9
    gpyopt==1.2.6
    dataclasses==0.6 #Necessary because of gpflow. Is included in Python 3.7, but check does not seem to work
    # typing-extensions~=3.7.4 # for tensorflow
    # tensorboard==2.4.0
    tensorflow-probability==0.11.1
    tensorflow==2.3.1
    #six~=1.15.0  # for tensorflow
    gpflow==2.2.1
    p_tqdm==1.3.3
    pymongo[tls]==3.11.2
    climin==0.1a1
#    opencv-python  # if error "No module named 'skbuild'" occurs: pip install scikit-build
     opencv-python-headless
    imageio==2.9.0
    pyyaml==5.3.1
    Sphinx
    rinohtype
    transformations
    statsmodels
    brokenaxes==0.4.2
    finufft==2.0.0
    transformations==2020.1.1
    psutil
    cython
    cython-setuptools
    ffmpeg
    docutils==0.16
    statsmodels==0.12.1
    networkx==2.4
    dacite
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
python_requires = >=3.7
[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install cmr_people_gp[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
dev = cython
testing =
    flake8
    flake8-docstrings
    pytest
    pytest-cov
    pytest-dependency
    pytest-console-scripts
    pytest-order


[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = cmr_people_gp.module:function
# For example:
# console_scripts =
#     fibonacci = cmr_people_gp.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
addopts = --ignore-glob='*example*'
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov --cov-report term-missing --cov
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.3.1
package = copa_map

[cython-defaults]
include_dirs = include/
